--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -5,12 +5,21 @@ page {
 }
 .container {
   padding: 40rpx;
+  display: flex;
+  flex-direction: column;
   font-size: 32rpx;
-  background: #f5f7fa;
+  border: solid 30rpx rgba(187,160,203,0.5);
+  border-radius: 16rpx;
+  background: #fff;
+  /* height: 100%; */
+  align-items: center;
+  /* justify-content: center; */
   height: 100%;
+  color: rgba(124,80,157);
 }
 .logo {
   margin-top: 60rpx;
+  margin-bottom: 60rpx;
   width: 375rpx;
   height: 60rpx;
   background-size: 375rpx;
@@ -29,7 +38,6 @@ page {
 .list-item-key {
   text-align: left;
   font-size: 28rpx;
-  color: #272a4d;
   letter-spacing: 0;
   line-height: 48rpx;
   font-weight: 400;
@@ -43,7 +51,6 @@ page {
   flex-direction: row;
   justify-content: space-between;
   font-size: 32rpx;
-  color: #131526;
   letter-spacing: 0;
   line-height: 56rpx;
   font-weight: 400;
@@ -73,10 +80,21 @@ page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* //margin-top: 250rpx; */
-  margin-bottom: 250rpx;
+  /* margin-top: 250rpx; */
+  /* margin-bottom: 250rpx; */
   width: 100%;
+  color: rgba(124,80,157);
 }
+.register {
+  font-size: 24rpx;
+  align-items: center;
+  /* justify-content: center; */
+  color: rgba(19, 21, 38, 0.70);
+  letter-spacing: 0;
+  line-height: 36rpx;
+  font-weight: 400;
+}
+
 .button-commit {
   margin-top: 70rpx;
   padding: 26rpx;
@@ -100,13 +118,13 @@ page {
   margin-top: 32rpx;
   font-size: 24rpx;
   display: flex;
+  
   align-items: center;
-  /* justify-content: center; */
+  justify-content: space-between;
   color: rgba(19, 21, 38, 0.70);
   letter-spacing: 0;
   line-height: 36rpx;
   font-weight: 400;
-  margin-bottom: 80rpx;
 }
 .userinfo-login-btn {
   font-size: 11px;
